# distiller

./: .gitignore  AGENTS.md  README.md  config.json  pyproject.toml  requirements.txt
src/: distiller.py  jsonReader.py  json_reader.py  logger.py  main.py  messageModels.py  message_models.py
src/config/: __init__.py  loader.py
tests/: distillerTest.py  jsonReaderTest.py  modelRequestTest.py
