[project]
name = "finer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "numpy>=2.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "selenium>=4.36.0",
    "torch>=2.8.0",
    "transformers>=4.57.3",
    "webdriver-manager>=4.0.2",
]
[tool.pyright]
venvPath = '.'
venv = '.venv'
