[project]
name = "finer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.2",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "flax>=0.8.5",
    "numpy>=2.0.2",
    "peft>=0.17.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "transformers>=4.57.3",
]
[tool.pyright]
venvPath = '.'
venv = '.venv'
