[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finer"
version = "0.1.0"
description = "LLM knowledge distillation and fine-tuning tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.2",
    "bs4>=0.0.2",
    "datasets>=3.0.0",
    "evaluate>=0.4.6",
    "flax>=0.8.5",
    "numpy>=2.0.2",
    "peft>=0.17.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "selenium>=4.36.0",
    "torch>=2.8.0",
    "transformers>=4.57.3",
    "webdriver-manager>=4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
finer = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
